# Scaffold_builder

./: .gitignore  CHANGELOG.md  README.md  cli.py  main.py  pyproject.toml  scaffold_builder.py  utils.py
.kiro/agents/: scaffold-builder-dev.json
.kiro/steering/: project.md  python.md
recipes/scaffold-builder/: build.sh  meta.yaml
tests/: test_integration.py  test_parity_old.py  test_unit.py
tests/fixtures/: ambiguous.coords  large.coords  large2_query.fasta  large2_reference.fasta  large3_query.fasta  large3_reference.fasta  large_query.fasta  large_reference.fasta  median.coords  median_query.fasta  median_reference.fasta  query.fasta  reference.fasta  reverse.coords  test.coords
