[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scaffold-builder"
version = "3.0.0"
description = "Combining de novo and reference-guided assembly with Scaffold_builder"
readme = "README.md"
license = { file = "COPYING" }
requires-python = ">=3.8"
dependencies = ["click>=8.0"]

[project.scripts]
scaffold_builder = "cli:main"

[tool.setuptools]
py-modules = ["cli", "utils", "scaffold_builder"]
